Created: week 1 lecture for AI class

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,4 +1,5 @@
 {
   "newFileLocation": "folder",
-  "newFileFolderPath": "04 - Notes"
+  "newFileFolderPath": "04 - Full Notes",
+  "attachmentFolderPath": "06 - Attachments"
 }
